<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/message"
            android:title="@string/message" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/feedback"
                android:title="@string/feedback"/>

            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/policy"
                android:title="@string/privacy_policy" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate"
                android:title="@string/rate_us" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/about" />

        </menu>
    </item>
</menu>
