<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_whatsapp"
        android:textColor="@color/red_color"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/whatsApp"
        android:text="@string/whatsapp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/whatsAppBusiness"
        android:text="@string/whatsapp_business"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="25dp"
        android:textSize="20dp"
        android:textStyle="bold">
    </TextView>

</LinearLayout>