<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightWhite"
    tools:context=".SplashScreen">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/direct_logo"
        android:layout_centerInParent="true"
        android:id="@+id/app_logo">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_below="@+id/app_logo"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/app_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="4dp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_color"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginBottom="1dp"
            android:text="@string/love">
        </TextView>

        <pl.droidsonroids.gif.GifImageView
            android:layout_margin="5dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/heart"/>

    </LinearLayout>

</RelativeLayout>