<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@drawable/direct_logo"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp">
        </ImageView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_some_love"
        android:textColor="@color/red_color"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/dialog_descrption"
        android:textColor="@color/colorAccent">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ratenow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:textAllCaps="false"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/rate_now"
            android:textColor="@color/colorLightWhite"/>

    </LinearLayout>

</LinearLayout>